import { CVSSV2, CVSSV3, VulnerabilitySeverity, VulnerabilityState } from './cve.proto';

export type VulnerabilityType =
    | 'UNKNOWN_VULNERABILITY'
    | 'IMAGE_VULNERABILITY'
    | 'K8S_VULNERABILITY'
    | 'ISTIO_VULNERABILITY'
    | 'NODE_VULNERABILITY'
    | 'OPENSHIFT_VULNERABILITY';

// No unset for automatic backwards compatibility
export type EmbeddedVulnerabilityScoreVersion = 'V2' | 'V3';

export type EmbeddedVulnerability = {
    cve: string;
    cvss: number; // float
    summary: string;
    link: string;
    // oneof set_fixed_by {
    fixedBy: string;
    // }
    scoreVersion: EmbeddedVulnerabilityScoreVersion;
    cvssV2: CVSSV2;
    cvssV3: CVSSV3;
    publishedOn: string; // ISO 8601 date string
    lastModified: string; // ISO 8601 date string
    // For internal purposes only.
    vulnerabilityType: VulnerabilityType;
    vulnerabilityTypes: VulnerabilityType[];
    suppressed: boolean;
    suppressActivation: string; // ISO 8601 date string
    suppressExpiry: string; // ISO 8601 date string
    // Time when the CVE was first seen in the system.
    firstSystemOccurrence: string; // ISO 8601 date string
    // Time when the CVE was first seen in the image.
    firstImageOccurrence: string; // ISO 8601 date string
    // Time when the CVE was first seen in the node.
    firstNodeOccurrence: string; // ISO 8601 date string

    severity: VulnerabilitySeverity;
    state: VulnerabilityState;
};
